# synthesizable-verilog-compiler

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  SETUP.md  todos.md
examples/: file.vh  test.v
examples/sim_counter/: config.yaml
examples/sim_counter/output/: count.txt  counter.vcd
examples/sim_counter/stimuli/: clk.txt  reset.txt
examples/sim_counter/verilog/: tb.out  tb.sv
examples/sim_counter/verilog/iverilog/: Makefile
examples/sim_counter/verilog/verilator/: Makefile  waves.vcd
scratchpad/: CMakeLists.txt
scratchpad/ast-explore/: CMakeLists.txt  ast_to_json.cpp  explore_ast.py
scratchpad/syntax-analysis/: extract_blocks.py
scratchpad/syntax-analysis/DataType/: member_blocks.txt  member_summary.txt
scratchpad/syntax-analysis/EventExpression/: member_blocks.txt  member_summary.txt
scratchpad/syntax-analysis/Expression/: member_blocks.txt  member_summary.txt
scratchpad/syntax-analysis/PrimaryExpression/: member_blocks.txt  member_summary.txt
scratchpad/syntax-analysis/PropertyExpr/: member_blocks.txt  member_summary.txt
scratchpad/syntax-analysis/Statement/: member_blocks.txt  member_summary.txt  member_synthesizable.txt
scratchpad/syntax-analysis/TimingControl/: member_blocks.txt  member_summary.txt
scratchpad/syntax-analysis/module_members/: allowed_members.txt  disallowed_members.txt  member_blocks.txt  member_summary.txt
scratchpad/vcd-compare/: CMakeLists.txt  vcd_compare.cpp
src/: dfg.h  expression_tree.cpp  expression_tree.h  ir_builder.cpp  ir_builder.h  ir_nodes.cpp  ir_nodes.h  main.cpp  resolver.cpp  resolver.h  syntax_extract.cpp  syntax_extract.h  types.cpp  types.h
src/ir/: dfg.cpp  dfg.h  resolved.cpp  resolved.h  types.h  unresolved.cpp  unresolved.h
src/passes/: concat_cleanup.cpp  concat_cleanup.h  condition_normalization.cpp  condition_normalization.h  constant_fold.cpp  constant_fold.h  dce.cpp  dce.h  domain_resolve.cpp  domain_resolve.h  elaboration.cpp  elaboration.h  extractor.cpp  extractor.h  flop_resolve.cpp  flop_resolve.h  type_propagation.cpp  type_propagation.h
src/sim/: simulator.cpp  simulator.h
src/util/: debug.h  source_loc.h  source_loc_resolve.h  syntax_helpers.cpp  syntax_helpers.h
tests/: uart.v  verilator.mk
tests/cordic/rtl/: cordic.v
tests/cordic/tb/: cordic_tb.v
tests/cordic/work/custom-sim/: config.yaml
tests/cordic/work/custom-sim/stimuli/: angle_in.txt  clk.txt  rst_n.txt  start.txt
tests/cordic/work/verilator/: Makefile
tests/counter/: config.yaml
tests/counter/src/: counter.v
tests/counter/stimuli/: a_rst.txt
tests/counter/tb/: counter_tb.sv
tests/counter/work/custom-sim/: config.yaml
tests/counter/work/custom-sim/stimuli/: a_rst.txt  clk.txt
tests/counter/work/verilator/: Makefile
tests/my_new_test/rtl/: my_new_test.v
tests/my_new_test/tb/: my_new_test_tb.v
tests/my_new_test/work/custom-sim/: config.yaml
tests/my_new_test/work/verilator/: Makefile
tests/sim_counter/verilog/: tb.sv
tests/subword_assign/rtl/: subword_assign.v
tests/subword_assign/tb/: async_recorder.v  subword_assign_tb.v  sync_recorder.v
tests/subword_assign/work/custom-sim/: config.yaml
tests/subword_assign/work/custom-sim/stimuli/: clk.txt  subword_in.txt  subword_out_1.txt  subword_out_2.txt
tests/subword_assign/work/verilator/: waves.hash
